Allowing vertical scroll on smaller screens. Fixes #51

--- a/ui/app/styles/main.css
+++ b/ui/app/styles/main.css
@@ -1,3 +1,4 @@
+
 .map {
   width: 100%;
   height: 100%;
@@ -523,4 +524,15 @@ hr {
 
 .document-list-hr {
   margin: 7px auto;
+}
+
+@media (max-width: 991px) {
+  body {
+    overflow-y: auto;
+  }
+
+  #left-container {
+    margin-bottom: 35px;
+  }
+
 }
